--- a/sections/bento.liquid
+++ b/sections/bento.liquid
@@ -387,7 +387,7 @@
         "min": 1,
         "max": 12,
         "step": 1,
-        "default": 12
+        "default": 1
       },
       {
         "type": "range",
@@ -713,7 +713,9 @@
     "presets": [
       {
         "name": "Bento grid",
-        "settings": {}
+        "settings": {
+          
+        }
       }
     ]
   }
